fix: inject optimizer core unconditionally and add benchmark smoke test to CI
Removes the training-file guard from both Maven InjectMojo and Gradle InjectTask
so the optimizer core is always embedded into the fat JAR. Adds a smoke-test CI
job that verifies the optimised JAR starts correctly.